# haskell-cli-starter

./: .envrc  CHANGELOG.md  README.md  flake.nix  fourmolu.yaml  haskell-cli-starter.cabal
.github/workflows/: ci.yml
app/: Main.hs
nix/: hix.nix
scripts/: Fourmolu.hs  HLint.hs
src/: HaskellCliStarter.hs
src/Development/Starter/: App.hs  Lib.hs
test/: Driver.hs  Spec.hs
test/Development/Starter/: AppSpec.hs  LibSpec.hs
