cabal-version:       3.0
name:                haskell-cli-starter
version:             0.0.0.0
synopsis:            See README for more info
description:
    See [README.md](https://github.com/sgillespie/haskell-cli-starter#haskell-cli-starter) for more details.
homepage:            https://github.com/sgillespie/haskell-cli-starter
bug-reports:         https://github.com/sgillespie/haskell-cli-starter/issues
license:             MIT
license-file:        LICENSE
author:              Sean D Gillespie
maintainer:          Sean D Gillespie <sean@mistersg.net>
copyright:           2023 Sean D Gillespie
category:            Developmment
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 9.0.2

source-repository head
  type:                git
  location:            https://github.com/sgillespie/haskell-cli-starter.git

common common-options
  build-depends:       base ^>= 4.15.1.0,
                       relude

  mixins:              base hiding (Prelude),
                       relude (Relude as Prelude),
                       relude

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -Wredundant-constraints
                       -Wnoncanonical-monad-instances
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies
                       -fwrite-ide-info
                       -hiedir=.hie
  if impl(ghc >= 8.10)
    -- Incorrectly flags relude and base; Re-enable during debugging
    -- ghc-options:       -Wunused-packages

  default-language:    Haskell2010
  default-extensions:  BangPatterns,
                       BinaryLiterals,
                       ConstraintKinds,
                       DataKinds,
                       DefaultSignatures,
                       DeriveDataTypeable,
                       DeriveFoldable,
                       DeriveFunctor,
                       DeriveGeneric,
                       DeriveTraversable,
                       DoAndIfThenElse,
                       EmptyDataDecls,
                       ExistentialQuantification,
                       FlexibleContexts,
                       FlexibleInstances,
                       FunctionalDependencies,
                       GADTs,
                       GeneralizedNewtypeDeriving,
                       InstanceSigs,
                       KindSignatures,
                       LambdaCase,
                       MultiParamTypeClasses,
                       MultiWayIf,
                       NamedFieldPuns,
                       OverloadedStrings,
                       PartialTypeSignatures,
                       PatternGuards,
                       PolyKinds,
                       RankNTypes,
                       RecordWildCards,
                       ScopedTypeVariables,
                       StandaloneDeriving,
                       TupleSections,
                       TypeFamilies,
                       TypeSynonymInstances,
                       ViewPatterns

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     HaskellCliStarter

executable haskell-cli-starter
  import:              common-options
  hs-source-dirs:      app
  main-is:             Main.hs
  build-depends:       haskell-cli-starter
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite fourmolu
  import:              common-options
  type:                exitcode-stdio-1.0
  main-is:             Fourmolu.hs
  hs-source-dirs:      scripts
  build-depends:       process
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                      
test-suite hlint
  import:              common-options
  type:                exitcode-stdio-1.0
  main-is:             HLint.hs
  hs-source-dirs:      scripts
  build-depends:       hlint
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
                       
test-suite haskell-cli-starter-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       haskell-cli-starter
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N
